--- a/app.css
+++ b/app.css
@@ -27,8 +27,8 @@ body {
 #apply {
     background-color: #EAC4D5;
     border: white 5px;
-    width: 350px;
-    height: 280px;
+    width: 450px;
+    height: 380px;
     display: flex;
     margin-left: 50px;
     border-radius: 50%;
@@ -38,6 +38,11 @@ body {
     gap: 30px;
 
 
+}
+
+.toggle {
+
+    border: wheat 5px solid;
 }
 
 img {
